[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "io-util", "time", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }